--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <h1>Malla Curricular de Arquitectura</h1>
-    <p>Haz clic en cada curso para marcarlo como completado o acceder a tus apuntes.</p>
+    <p>Haz clic en cada curso para marcarlo como completado. Si un curso tiene prerequisito, no podrás marcarlo hasta completarlo.</p>
     <div class="grid">
         <div class="semestre">
             <h2>Semestre 1</h2>
             <ul>
-                <li><a href="#">Dibujo Técnico</a></li>
+                <li><a href="#" data-curso="acond1">Acondicionamiento Ambiental I</a></li>
                 <li><a href="#">Introducción a la Arquitectura</a></li>
                 <li><a href="#">Matemáticas</a></li>
             </ul>
@@ -21,20 +21,86 @@
         <div class="semestre">
             <h2>Semestre 2</h2>
             <ul>
+                <li><a href="#" data-curso="acond2" data-prereq="acond1">Acondicionamiento Ambiental II</a></li>
                 <li><a href="#">Historia de la Arquitectura</a></li>
                 <li><a href="#">Geometría Descriptiva</a></li>
-                <li><a href="#">Física</a></li>
-            </ul>
-        </div>
-        <div class="semestre">
-            <h2>Semestre 3</h2>
-            <ul>
-                <li><a href="#">Proyectos I</a></li>
-                <li><a href="#">Materiales de Construcción</a></li>
-                <li><a href="#">Historia del Arte</a></li>
             </ul>
         </div>
     </div>
-    <script src="script.js"></script>
+
+    <script>
+        document.querySelectorAll('.semestre a').forEach(link => {
+            link.addEventListener('click', function(e) {
+                e.preventDefault();
+                const prereq = this.dataset.prereq;
+                if (prereq) {
+                    const prereqLink = document.querySelector(`[data-curso="${prereq}"]`);
+                    if (!prereqLink.classList.contains('completado')) {
+                        alert('Debes completar primero el curso prerequisito antes de marcar este.');
+                        return;
+                    }
+                }
+                this.classList.toggle('completado');
+            });
+        });
+    </script>
+    <style>
+        body {
+            font-family: sans-serif;
+            margin: 20px;
+            background: #f5f5f5;
+            color: #333;
+            text-align: center;
+        }
+
+        h1 {
+            color: #333;
+        }
+
+        .grid {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .semestre {
+            background: white;
+            padding: 15px;
+            border-radius: 8px;
+            width: 220px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+
+        .semestre h2 {
+            font-size: 18px;
+            color: #007acc;
+        }
+
+        .semestre ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        .semestre li {
+            margin: 8px 0;
+        }
+
+        .semestre a {
+            color: #007acc;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        .semestre a:hover {
+            text-decoration: underline;
+        }
+
+        .completado {
+            color: green;
+            font-weight: bold;
+        }
+    </style>
 </body>
 </html>
