--- a/index.html
+++ b/index.html
@@ -62,72 +62,73 @@ body {
 </head>
 <body>
 <h1>🌸 Malla Curricular de Arquitectura 🌸</h1>
-<p>Haz clic para marcar como completado. Cursos que requieren créditos aparecen en <span style="color:#e85c70;font-weight:bold;">rosado</span>.</p>
+<p>Haz clic para marcar como completado. Los cursos con requisitos de créditos aparecen en <span style="color:#e85c70;font-weight:bold;">rosado</span>.</p>
 <div id="malla"></div>
 <script>
 const cursos = [
-    {semestre:1, nombre:'MATEMATICA'},
-    {semestre:1, nombre:'IDENTIDAD Y PERUANIDAD'},
-    {semestre:1, nombre:'PROPEDEUTICA PARA LA INVESTIGACION', id:'propinvest'},
-    {semestre:1, nombre:'PROYECTOS 1: EL ESPACIO CORPORAL', id:'proy1'},
-    {semestre:1, nombre:'REPRESENTACION 1: PENSAMIENTO Y REALIDAD', id:'rep1'},
-    {semestre:1, nombre:'TALLER DE ARTES'},
-    {semestre:2, nombre:'CALCULO'},
-    {semestre:2, nombre:'PROYECTOS II: EL ESPACIO ARQUITECTONICO', id:'proy2', prereq:'proy1'},
-    {semestre:2, nombre:'REPRESENTACION II: EL PROCESO PROYECTUAL', id:'rep2', prereq:'rep1'},
-    {semestre:2, nombre:'TALLER DE ARGUMENTACION'},
-    {semestre:2, nombre:'TALLER DE DEPORTES'},
-    {semestre:2, nombre:'TEORIA E HISTORIA CRITICA DE LA ARQUITECTURA I', id:'thca1', prereq:'propinvest'},
-    // Agrega los demás cursos de forma equivalente, con "id" y "prereq" donde corresponda
-    {semestre:5, nombre:'ARQUITECTURA Y CINE', creditos:true},
-    {semestre:5, nombre:'DISEÑO DE INTERIORES', creditos:true},
-    {semestre:5, nombre:'ARQUITECTURA PERUANA Y LATINOAMERICANA', creditos:true},
-    {semestre:6, nombre:'ARQUITECTURA CONTEMPORÁNEA', creditos:true},
-    {semestre:6, nombre:'DISEÑO DE ARQUITECTURA COMERCIAL', creditos:true},
-    {semestre:6, nombre:'REDACCIÓN CIENTÍFICA Y PUBLICACIÓN DE ARTÍCULOS', creditos:true},
-    {semestre:7, nombre:'ARQUITECTURA Y URBANISMO CON ENFOQUE DE GÉNERO', creditos:true},
-    {semestre:7, nombre:'LEAN CONSTRUCTION', creditos:true},
-    {semestre:7, nombre:'URBANISMO E INVESTIGACIÓN', creditos:true},
-    {semestre:8, nombre:'BIM & MANAGEMENT', creditos:true},
-    {semestre:8, nombre:'DISEÑO PARAMÉTRICO', creditos:true},
-    {semestre:8, nombre:'PLANEAMIENTO ESTRATÉGICO', creditos:true},
-    {semestre:9, nombre:'ANTROPOLOGÍA DE LA CULTURA CHICHA PERUANA', creditos:true},
-    {semestre:9, nombre:'LUMINOTECNIA Y ACÚSTICA', creditos:true},
-    {semestre:9, nombre:'RESTAURACIÓN Y PATOLOGÍAS EN EDIFICACIONES', creditos:true},
+// === Ejemplo de ingreso completo para dos semestres ===
+{semestre:1, nombre:'MATEMATICA'},
+{semestre:1, nombre:'IDENTIDAD Y PERUANIDAD'},
+{semestre:1, nombre:'PROPEDEUTICA PARA LA INVESTIGACION', id:'propinvest'},
+{semestre:1, nombre:'PROYECTOS 1: EL ESPACIO CORPORAL', id:'proy1'},
+{semestre:1, nombre:'REPRESENTACION 1: PENSAMIENTO Y REALIDAD', id:'rep1'},
+{semestre:1, nombre:'TALLER DE ARTES'},
+{semestre:2, nombre:'CALCULO'},
+{semestre:2, nombre:'PROYECTOS II: EL ESPACIO ARQUITECTONICO', id:'proy2', prereq:'proy1'},
+{semestre:2, nombre:'REPRESENTACION II: EL PROCESO PROYECTUAL', id:'rep2', prereq:'rep1'},
+{semestre:2, nombre:'TALLER DE ARGUMENTACION'},
+{semestre:2, nombre:'TALLER DE DEPORTES'},
+{semestre:2, nombre:'TEORIA E HISTORIA CRITICA DE LA ARQUITECTURA I', id:'thca1', prereq:'propinvest'},
+// === Agrega todos tus cursos de cada semestre en este mismo formato ===
+{semestre:5, nombre:'ARQUITECTURA Y CINE', creditos:true},
+{semestre:5, nombre:'DISEÑO DE INTERIORES', creditos:true},
+{semestre:5, nombre:'ARQUITECTURA PERUANA Y LATINOAMERICANA', creditos:true},
+{semestre:6, nombre:'ARQUITECTURA CONTEMPORÁNEA', creditos:true},
+{semestre:6, nombre:'DISEÑO DE ARQUITECTURA COMERCIAL', creditos:true},
+{semestre:6, nombre:'REDACCIÓN CIENTÍFICA Y PUBLICACIÓN DE ARTÍCULOS', creditos:true},
+{semestre:7, nombre:'ARQUITECTURA Y URBANISMO CON ENFOQUE DE GÉNERO', creditos:true},
+{semestre:7, nombre:'LEAN CONSTRUCTION', creditos:true},
+{semestre:7, nombre:'URBANISMO E INVESTIGACIÓN', creditos:true},
+{semestre:8, nombre:'BIM & MANAGEMENT', creditos:true},
+{semestre:8, nombre:'DISEÑO PARAMÉTRICO', creditos:true},
+{semestre:8, nombre:'PLANEAMIENTO ESTRATÉGICO', creditos:true},
+{semestre:9, nombre:'ANTROPOLOGÍA DE LA CULTURA CHICHA PERUANA', creditos:true},
+{semestre:9, nombre:'LUMINOTECNIA Y ACÚSTICA', creditos:true},
+{semestre:9, nombre:'RESTAURACIÓN Y PATOLOGÍAS EN EDIFICACIONES', creditos:true},
 ];
 const container = document.getElementById('malla');
 for(let s=1;s<=11;s++){
-    const div=document.createElement('div');
-    div.className='semestre';
-    const h=document.createElement('h2');
-    h.textContent=`Semestre ${s}`;
-    div.appendChild(h);
-    const ul=document.createElement('ul');
-    cursos.filter(c=>c.semestre===s).forEach(curso=>{
-        const li=document.createElement('li');
-        const a=document.createElement('a');
-        a.textContent=curso.nombre;
-        a.href='#';
-        a.className='curso';
-        if(curso.creditos) a.classList.add('credito');
-        if(curso.id) a.dataset.curso=curso.id;
-        if(curso.prereq) a.dataset.prereq=curso.prereq;
-        a.addEventListener('click',function(e){
-            e.preventDefault();
-            if(curso.prereq){
-                const prereq=document.querySelector(`[data-curso='${curso.prereq}']`);
-                if(!prereq.classList.contains('completado')){
-                    alert('Debes completar primero el curso prerequisito');
-                    return;
-                }
-            }
-            a.classList.toggle('completado');
-        });
-        li.appendChild(a);
-        ul.appendChild(li);
-    });
-    div.appendChild(ul);
-    container.appendChild(div);
+const div=document.createElement('div');
+div.className='semestre';
+const h=document.createElement('h2');
+h.textContent=`Semestre ${s}`;
+div.appendChild(h);
+const ul=document.createElement('ul');
+cursos.filter(c=>c.semestre===s).forEach(curso=>{
+const li=document.createElement('li');
+const a=document.createElement('a');
+a.textContent=curso.nombre;
+a.href='#';
+a.className='curso';
+if(curso.creditos) a.classList.add('credito');
+if(curso.id) a.dataset.curso=curso.id;
+if(curso.prereq) a.dataset.prereq=curso.prereq;
+a.addEventListener('click',function(e){
+e.preventDefault();
+if(curso.prereq){
+const prereq=document.querySelector(`[data-curso='${curso.prereq}']`);
+if(!prereq.classList.contains('completado')){
+alert('Debes completar primero el curso prerequisito');
+return;
+}
+}
+a.classList.toggle('completado');
+});
+li.appendChild(a);
+ul.appendChild(li);
+});
+div.appendChild(ul);
+container.appendChild(div);
 }
 </script>
 </body>
