--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@ body {
 </style>
 </head>
 <body>
-<h1>🌸 Malla Curricular de Arquitectura 🌸</h1>
-<p>Haz clic para marcar como completado. Los cursos con requisitos de créditos aparecen en <span style="color:#e85c70;font-weight:bold;">rosado</span>.</p>
+<h1>🌸 MALLA CURRICULAR ARQUITECTURA 🌸</h1>
+<p>Haz clic para marcar como completado. Los cursos que requieren créditos aparecen en rosado.</p>
 <div id="malla"></div>
 <script>
 const cursos = [
-// === Ejemplo de ingreso completo para dos semestres ===
+// PARTE 1: Semestre 1 y Semestre 2
 {semestre:1, nombre:'MATEMATICA'},
 {semestre:1, nombre:'IDENTIDAD Y PERUANIDAD'},
 {semestre:1, nombre:'PROPEDEUTICA PARA LA INVESTIGACION', id:'propinvest'},
@@ -79,56 +79,91 @@ const cursos = [
 {semestre:2, nombre:'TALLER DE ARGUMENTACION'},
 {semestre:2, nombre:'TALLER DE DEPORTES'},
 {semestre:2, nombre:'TEORIA E HISTORIA CRITICA DE LA ARQUITECTURA I', id:'thca1', prereq:'propinvest'},
-// === Agrega todos tus cursos de cada semestre en este mismo formato ===
-{semestre:5, nombre:'ARQUITECTURA Y CINE', creditos:true},
-{semestre:5, nombre:'DISEÑO DE INTERIORES', creditos:true},
-{semestre:5, nombre:'ARQUITECTURA PERUANA Y LATINOAMERICANA', creditos:true},
-{semestre:6, nombre:'ARQUITECTURA CONTEMPORÁNEA', creditos:true},
-{semestre:6, nombre:'DISEÑO DE ARQUITECTURA COMERCIAL', creditos:true},
-{semestre:6, nombre:'REDACCIÓN CIENTÍFICA Y PUBLICACIÓN DE ARTÍCULOS', creditos:true},
-{semestre:7, nombre:'ARQUITECTURA Y URBANISMO CON ENFOQUE DE GÉNERO', creditos:true},
-{semestre:7, nombre:'LEAN CONSTRUCTION', creditos:true},
-{semestre:7, nombre:'URBANISMO E INVESTIGACIÓN', creditos:true},
-{semestre:8, nombre:'BIM & MANAGEMENT', creditos:true},
-{semestre:8, nombre:'DISEÑO PARAMÉTRICO', creditos:true},
-{semestre:8, nombre:'PLANEAMIENTO ESTRATÉGICO', creditos:true},
-{semestre:9, nombre:'ANTROPOLOGÍA DE LA CULTURA CHICHA PERUANA', creditos:true},
-{semestre:9, nombre:'LUMINOTECNIA Y ACÚSTICA', creditos:true},
-{semestre:9, nombre:'RESTAURACIÓN Y PATOLOGÍAS EN EDIFICACIONES', creditos:true},
 ];
 const container = document.getElementById('malla');
-for(let s=1;s<=11;s++){
-const div=document.createElement('div');
-div.className='semestre';
-const h=document.createElement('h2');
-h.textContent=`Semestre ${s}`;
-div.appendChild(h);
-const ul=document.createElement('ul');
-cursos.filter(c=>c.semestre===s).forEach(curso=>{
-const li=document.createElement('li');
-const a=document.createElement('a');
-a.textContent=curso.nombre;
-a.href='#';
-a.className='curso';
-if(curso.creditos) a.classList.add('credito');
-if(curso.id) a.dataset.curso=curso.id;
-if(curso.prereq) a.dataset.prereq=curso.prereq;
-a.addEventListener('click',function(e){
-e.preventDefault();
-if(curso.prereq){
-const prereq=document.querySelector(`[data-curso='${curso.prereq}']`);
-if(!prereq.classList.contains('completado')){
-alert('Debes completar primero el curso prerequisito');
-return;
+for(let s=1;s<=2;s++){
+    const div=document.createElement('div');
+    div.className='semestre';
+    const h=document.createElement('h2');
+    h.textContent=`Semestre ${s}`;
+    div.appendChild(h);
+    const ul=document.createElement('ul');
+    cursos.filter(c=>c.semestre===s).forEach(curso=>{
+        const li=document.createElement('li');
+        const a=document.createElement('a');
+        a.textContent=curso.nombre;
+        a.href='#';
+        a.className='curso';
+        if(curso.creditos) a.classList.add('credito');
+        if(curso.id) a.dataset.curso=curso.id;
+        if(curso.prereq) a.dataset.prereq=curso.prereq;
+        a.addEventListener('click',function(e){
+            e.preventDefault();
+            if(curso.prereq){
+                const prereq=document.querySelector(`[data-curso='${curso.prereq}']`);
+                if(!prereq.classList.contains('completado')){
+                    alert('Debes completar primero el curso prerequisito');
+                    return;
+                }
+            }
+            a.classList.toggle('completado');
+        });
+        li.appendChild(a);
+        ul.appendChild(li);
+    });
+    div.appendChild(ul);
+    container.appendChild(div);
 }
-}
-a.classList.toggle('completado');
-});
-li.appendChild(a);
-ul.appendChild(li);
-});
-div.appendChild(ul);
-container.appendChild(div);
+</script>
+    <script>
+const cursos = [
+// PARTE 2: Semestre 3 y Semestre 4
+{semestre:3, nombre:'PROYECTOS III: ARQUITECTURA Y LUGAR', id:'proy3', prereq:'proy2'},
+{semestre:3, nombre:'REPRESENTACIÓN III: EL SENTIDO DE LA ARQUITECTURA', id:'rep3', prereq:'rep2'},
+{semestre:3, nombre:'SISTEMAS ESTRUCTURALES Y TECNOLOGÍA DE MATERIALES I'},
+{semestre:3, nombre:'TALLER DE LECTURA Y REDACCIÓN'},
+{semestre:3, nombre:'TEORÍA E HISTORIA CRITICA DE LA ARQUITECTURA II', id:'thca2', prereq:'thca1'},
+
+{semestre:4, nombre:'PROYECTOS IV: HABITAR LA VIVIENDA', id:'proy4', prereq:'proy3'},
+{semestre:4, nombre:'RESPONSABILIDAD CIUDADANA Y ECOLOGIA'},
+{semestre:4, nombre:'SISTEMAS ESTRUCTURALES Y TECNOLOGÍA DE MATERIALES II', id:'sistemat2'},
+{semestre:4, nombre:'TALLER DE COACHING Y LIDERAZGO'},
+{semestre:4, nombre:'TALLER DE FELICIDAD Y BIENESTAR'},
+{semestre:4, nombre:'TALLER DE INTELIGENCIA EMOCIONAL Y HABILIDADES SOCIALES'},
+{semestre:4, nombre:'TEORIA E HISTORIA CRITICA DE LA ARQUITECTURA III', id:'thca3', prereq:'thca2'},
+];
+for(let s=3;s<=4;s++){
+    const div=document.createElement('div');
+    div.className='semestre';
+    const h=document.createElement('h2');
+    h.textContent=`Semestre ${s}`;
+    div.appendChild(h);
+    const ul=document.createElement('ul');
+    cursos.filter(c=>c.semestre===s).forEach(curso=>{
+        const li=document.createElement('li');
+        const a=document.createElement('a');
+        a.textContent=curso.nombre;
+        a.href='#';
+        a.className='curso';
+        if(curso.creditos) a.classList.add('credito');
+        if(curso.id) a.dataset.curso=curso.id;
+        if(curso.prereq) a.dataset.prereq=curso.prereq;
+        a.addEventListener('click',function(e){
+            e.preventDefault();
+            if(curso.prereq){
+                const prereq=document.querySelector(`[data-curso='${curso.prereq}']`);
+                if(!prereq || !prereq.classList.contains('completado')){
+                    alert('Debes completar primero el curso prerequisito');
+                    return;
+                }
+            }
+            a.classList.toggle('completado');
+        });
+        li.appendChild(a);
+        ul.appendChild(li);
+    });
+    div.appendChild(ul);
+    document.getElementById('malla').appendChild(div);
 }
 </script>
 </body>
