Update index.html NNN

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ for(let s=1;s<=4;s++){
 const cursos5y6 = [
 // Semestre 5
 {semestre:5, nombre:'ACONDICIONAMIENTO AMBIENTAL I', id:'aa1'},
-{semestre:5, nombre:'ARQUITECTURA LEGAL I'},
+{semestre:5, nombre:'ARQUITECTURA LEGAL I', id:'arqlegal1'},
 {semestre:5, nombre:'ARQUITECTURA PERUANA Y LATINOAMERICANA', creditos:80},
 {semestre:5, nombre:'ARQUITECTURA Y CINE', creditos:80},
 {semestre:5, nombre:'DISEÑO DE INTERIORES', creditos:80},
