--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Malla Curricular de Arquitectura</title>
 <style>
+    .curso.desactivado {
+    color: gray;
+    pointer-events: none;
+    cursor: default;
+    opacity: 0.5;
+}
 body {
     font-family: sans-serif;
     background: #f0f4fa;
