--- a/index.html
+++ b/index.html
@@ -194,17 +194,29 @@ cursos5y6.forEach(curso => {
     if (curso.creditos) a.classList.add('credito');
     if (curso.id) a.dataset.curso = curso.id;
     if (curso.prereq) a.dataset.prereq = curso.prereq;
-    a.addEventListener('click', function (e) {
-        e.preventDefault();
-        if (curso.prereq) {
-            const prereq = document.querySelector(`[data-curso='${curso.prereq}']`);
+   function actualizarEstadoCursos() {
+    document.querySelectorAll('.curso').forEach(cursoEl => {
+        const prereqId = cursoEl.dataset.prereq;
+        if (prereqId) {
+            const prereq = document.querySelector(`[data-curso='${prereqId}']`);
             if (!prereq || !prereq.classList.contains('completado')) {
-                alert('Debes completar primero el curso prerequisito');
-                return;
+                cursoEl.classList.add('desactivado');
+            } else {
+                cursoEl.classList.remove('desactivado');
             }
         }
-        a.classList.toggle('completado');
     });
+}
+
+a.addEventListener('click', function (e) {
+    e.preventDefault();
+    if (a.classList.contains('desactivado')) {
+        alert('Debes completar primero el curso prerequisito');
+        return;
+    }
+    a.classList.toggle('completado');
+    actualizarEstadoCursos();
+});
     li.appendChild(a);
     ul.appendChild(li);
 });
@@ -253,17 +265,29 @@ cursos7y8.forEach(curso => {
     if (curso.creditos) a.classList.add('credito');
     if (curso.id) a.dataset.curso = curso.id;
     if (curso.prereq) a.dataset.prereq = curso.prereq;
-    a.addEventListener('click', function (e) {
-        e.preventDefault();
-        if (curso.prereq) {
-            const prereq = document.querySelector(`[data-curso='${curso.prereq}']`);
+    function actualizarEstadoCursos() {
+    document.querySelectorAll('.curso').forEach(cursoEl => {
+        const prereqId = cursoEl.dataset.prereq;
+        if (prereqId) {
+            const prereq = document.querySelector(`[data-curso='${prereqId}']`);
             if (!prereq || !prereq.classList.contains('completado')) {
-                alert('Debes completar primero el curso prerequisito');
-                return;
+                cursoEl.classList.add('desactivado');
+            } else {
+                cursoEl.classList.remove('desactivado');
             }
         }
-        a.classList.toggle('completado');
     });
+}
+
+a.addEventListener('click', function (e) {
+    e.preventDefault();
+    if (a.classList.contains('desactivado')) {
+        alert('Debes completar primero el curso prerequisito');
+        return;
+    }
+    a.classList.toggle('completado');
+    actualizarEstadoCursos();
+});
     li.appendChild(a);
     ul.appendChild(li);
 });
@@ -312,19 +336,28 @@ cursos9a11.forEach(curso => {
     if (curso.creditos) a.classList.add('credito');
     if (curso.id) a.dataset.curso = curso.id;
     if (curso.prereq) a.dataset.prereq = curso.prereq;
-    a.addEventListener('click', function (e) {
-        e.preventDefault();
-        if (curso.prereq) {
-            const prereq = document.querySelector(`[data-curso='${curso.prereq}']`);
+   function actualizarEstadoCursos() {
+    document.querySelectorAll('.curso').forEach(cursoEl => {
+        const prereqId = cursoEl.dataset.prereq;
+        if (prereqId) {
+            const prereq = document.querySelector(`[data-curso='${prereqId}']`);
             if (!prereq || !prereq.classList.contains('completado')) {
-                alert('Debes completar primero el curso prerequisito');
-                return;
+                cursoEl.classList.add('desactivado');
+            } else {
+                cursoEl.classList.remove('desactivado');
             }
         }
-        a.classList.toggle('completado');
     });
-    li.appendChild(a);
-    ul.appendChild(li);
+}
+
+a.addEventListener('click', function (e) {
+    e.preventDefault();
+    if (a.classList.contains('desactivado')) {
+        alert('Debes completar primero el curso prerequisito');
+        return;
+    }
+    a.classList.toggle('completado');
+    actualizarEstadoCursos();
 });
 </script>
 </body>
